--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />  <!-- icon by https://icons8.com  -->
+    <!-- icon by https://icons8.com  -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Paul Griz Portfolio"
-      content="Paul Griz Portfolio"
-    />
+    <meta name="Paul Griz Portfolio" content="Paul Griz Portfolio" />
+    <meta name="description" content="The Portfolio of Paul Griz - A studying Full Stack Developer" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
